--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,16 +16,16 @@
                 position: fixed;
             }
         </style>
-        <link href="booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
-        <script src="booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
-        <script src="booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
-        <link href="booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="scroll.js" type="text/javascript"></script>
-        <script src="eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
-        <link href="jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
-        <script src="jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/scroll.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/js/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     </head>
     <body>
 
