--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -75,7 +75,7 @@
             </ol>
             <div class="carousel-inner" >
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="Imagenes/seis.jpg" alt="First slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="img/seis.jpg" alt="First slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-left">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="Imagenes/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="img/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="nuevaImagen/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="img/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="Imagenes/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="img/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="Imagenes/siete.png" alt="Fifth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="img/siete.png" alt="Fifth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
