--- a/web/Instalaciones.xhtml
+++ b/web/Instalaciones.xhtml
@@ -4,10 +4,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <head>
-        <title>Facelet Title</title>
+        <title>Instalaciones</title>
         <style>
             body {
-                background: url(../Imagenes/dos.png);
+                background: url(resourcesFronted/img/dos.png);
                 background-position:0 0 ;
                 background-attachment: fixed;
             }
@@ -18,26 +18,26 @@
             }
 
         </style>
-        <link href="../booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../scroll.js" type="text/javascript"></script>
-        <script src="../eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
-        <link href="../jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
-        <script src="../jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/scroll.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/js/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
 
-        <script src="../imagen/jquery.jcarousellite.js" type="text/javascript"></script>
-        <script src="../imagen/ca.js" type="text/javascript"></script>
-        <link href="../imagen/carru.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/js/jquery.jcarousellite.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/ca.js" type="text/javascript"></script>
+        <link href="resourcesFronted/css/carru.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         
         <!--=============Menu principal==================-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="../faces/index.xhtml">Inicion</a>
+            <a class="navbar-brand" href="faces/index.xhtml">Inicion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -80,7 +80,7 @@
             </ol>
             <div class="carousel-inner" >
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../Imagenes/seis.jpg" alt="First slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/seis.jpg" alt="First slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-left">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../nuevaImagen/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/siete.png" alt="Fifth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/siete.png" alt="Fifth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -164,7 +164,7 @@
                 <div class="col-1"></div>
                 <div class="col-5">
                     <div>
-                        <img src="../imagen/equipo2.jpg"  width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
+                        <img src="resourcesFronted/img/equipo2.jpg"  width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
                     </div>
                 </div>
                 <div class="col-6">
@@ -185,7 +185,7 @@
                 <div class="col-1"></div>
                 <div class="col-5">
                     <div>
-                        <img src="../imagen/equipo5.jpg"  width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
+                        <img src="resourcesFronted/img/equipo5.jpg"  width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
                     </div>
                 </div>
                 <div class="col-6">
@@ -205,7 +205,7 @@
                 <div class="col-1"></div>
                 <div class="col-5">
                     <div>
-                        <img src="../imagen/equipo7.jpg" width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
+                        <img src="resourcesFronted/img/equipo7.jpg" width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
                     </div>
                 </div>
                 <div class="col-6">
@@ -225,7 +225,7 @@
                 <div class="col-1"></div>
                 <div class="col-5">
                     <div>
-                        <img src="../imagen/equipo8.jpg" width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
+                        <img src="resourcesFronted/img/equipo8.jpg" width="600px" height="400px" alt="Generic placeholder thumbnail"/> 
                     </div>
                 </div>
                 <div class="col-6">
@@ -257,12 +257,12 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../particles.js"></script>
-        <script src="../app.js"></script>
-        <script src="../booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/particles.js"></script>
+        <script src="resourcesFronted/app.js"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
     </body>
 </html>
 
