--- a/web/Localicacion.xhtml
+++ b/web/Localicacion.xhtml
@@ -4,10 +4,10 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <head>
-        <title>Facelet Title</title>
+        <title>Localizanos</title>
         <style>
             body {
-                background: url(../Imagenes/dos.png);
+                background: url(resourcesFronted/img/dos.png);
                 background-position:0 0 ;
                 background-attachment: fixed;
             }
@@ -15,22 +15,22 @@
             
 
         </style>
-        <link href="../booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../scroll.js" type="text/javascript"></script>
-        <script src="../eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
-        <link href="../jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
-        <script src="../jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/scroll.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/js/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
     </head>
     <body>
 
         <!--=============Menu principal==================-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="../faces/index.xhtml">Inicion</a>
+            <a class="navbar-brand" href="faces/index.xhtml">Inicion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -74,7 +74,7 @@
             </ol>
             <div class="carousel-inner" >
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../Imagenes/seis.jpg" alt="First slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/seis.jpg" alt="First slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-left">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../nuevaImagen/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/siete.png" alt="Fifth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/siete.png" alt="Fifth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -172,12 +172,12 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../particles.js"></script>
-        <script src="../app.js"></script>
-        <script src="../booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/particles.js"></script>
+        <script src="resourcesFronted/app.js"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
     </body>
 </html>
 
