--- a/web/Valores.xhtml
+++ b/web/Valores.xhtml
@@ -6,7 +6,7 @@
         <title>Facelet Title</title>
         <style>
             body {
-                background: url(../Imagenes/dos.png);
+                background: url(resourcesFronted/img/dos.png);
                 background-position:0 0 ;
                 background-attachment: fixed;
             }
@@ -27,22 +27,23 @@
             }
 
         </style>
-        <link href="../booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-        <link href="../booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../scroll.js" type="text/javascript"></script>
-        <script src="../eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
-        <link href="../jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
-        <script src="../jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/animate.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-latest.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/mainparalax.js" type="text/javascript"></script>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+        <link href="resourcesFronted/booststrpa-4.0.0-zip/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/scroll.js" type="text/javascript"></script>
+        <script src="resourcesFronted/js/eskju.jquery.scrollflow.min.js" type="text/javascript"></script>
+        <link href="resourcesFronted/js/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css"/>
+        <script src="resourcesFronted/js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
+
     </head>
     <body>
       
         <!--=============Menu principal==================-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="../faces/index.xhtml">Inicion</a>
+            <a class="navbar-brand" href="faces/index.xhtml">Inicion</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -86,7 +87,7 @@
             </ol>
             <div class="carousel-inner" >
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../Imagenes/seis.jpg" alt="First slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/seis.jpg" alt="First slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-left">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -96,7 +97,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/cuatro.jpg" alt="Second slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -105,7 +106,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../nuevaImagen/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/equipo2.jpg" alt="Third slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -114,8 +115,8 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
-                    <div class="container">
+                    <img class="d-block w-100" src="resourcesFronted/img/ocho.jpg" alt="Fourth slide" width="100%" height="800px"/>
+                    <div class="container">w
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
                             <p class="text-warning">Los mejores Equipo  para sus consultas, terapia, examenes, operaciones, etc</p>
@@ -123,7 +124,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Imagenes/siete.png" alt="Fifth slide" width="100%" height="800px"/>
+                    <img class="d-block w-100" src="resourcesFronted/img/siete.png" alt="Fifth slide" width="100%" height="800px"/>
                     <div class="container">
                         <div class="carousel-caption d-none d-md-block text-right">
                             <h1 class="text-warning">Examenes Completos</h1>
@@ -160,7 +161,7 @@
 DEHECK tiene como objetivo brindar atención médica de una manera innovadora y con calidad. Brindamos servicios médicos primarios con procesos ágiles, diagnósticos certeros y alta calidez humana generando confianza en nuestros usuarios.</p>
                     </td>
                     <td>
-                        <img src="../nuevaImagen/camillas.jpg" class="rounded float-right" alt="..." height="400"/>
+                        <img src="resourcesFronted/img/camillas.jpg" class="rounded float-right" alt="..." height="400"/>
                     </td>
                 </tr>
             </table>
@@ -181,7 +182,7 @@ DEHECK tiene como objetivo brindar atención médica de una manera innovadora y 
                             Trabajamos para prestar el servicio de la forma más diligente posible y eso sólo se consigue con una atención en el lugar preciso, con el profesional indicado</p>
                     </td>
                     <td>
-                        <img src="../nuevaImagen/quirofano.jpg" class="rounded float-right" alt="..." height="400" width="600"/>
+                        <img src="resourcesFronted/img/quirofano.jpg" class="rounded float-right" alt="..." height="400" width="600"/>
                     </td>
                 </tr>
             </table>
@@ -201,7 +202,7 @@ DEHECK tiene como objetivo brindar atención médica de una manera innovadora y 
                         </p>
                     </td>
                     <td>
-                        <img src="../Imagenes/nueve.png" class="rounded float-right" alt="..." height="400"/>
+                        <img src="resourcesFronted/img/nueve.png" class="rounded float-right" alt="..." height="400"/>
                     </td>
                 </tr>
             </table>
@@ -235,7 +236,7 @@ DEHECK tiene como objetivo brindar atención médica de una manera innovadora y 
                         
                     </td>
                     <td>
-                        <img src="../nuevaImagen/prenatal.jpg" class="rounded float-right" alt="..." height="400"/>
+                        <img src="resourcesFronted/img/prenatal.jpg" class="rounded float-right" alt="..." height="400"/>
                     </td>
                 </tr>
             </table>
@@ -259,7 +260,7 @@ DEHECK tiene como objetivo brindar atención médica de una manera innovadora y 
 
                     </td>
                     <td>
-                        <img src="../nuevaImagen/resonancia.jpg" class="rounded float-right" alt="..." height="400"/>
+                        <img src="resourcesFronted/img/resonancia.jpg" class="rounded float-right" alt="..." height="400"/>
                     </td>
                 </tr>
             </table>
@@ -277,12 +278,12 @@ DEHECK tiene como objetivo brindar atención médica de una manera innovadora y 
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="../booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../particles.js"></script>
-        <script src="../app.js"></script>
-        <script src="../booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
-        <script src="../booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/particles.js"></script>
+        <script src="resourcesFronted/app.js"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/jquery-3.2.1.slim.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/bootstrap.min.js" type="text/javascript"></script>
+        <script src="resourcesFronted/booststrpa-4.0.0-zip/popper.min.js" type="text/javascript"></script>
     </body>
 </html>
 
