--- a/web/Equipo.xhtml
+++ b/web/Equipo.xhtml
@@ -61,8 +61,7 @@
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"/>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Inicio de Sesion</button>
                 </form>
             </div>
         </nav>
