--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -123,7 +123,7 @@
                 <article class="tile">
                     <a href="../faces/admin/RegistroEmpleado.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-face"> </i></div>
-                        <div class="tile-name all-tittles">Empleados</div>
+                        <div class="tile-name all-tittles">Eventos</div>
                         <div class="tile-num full-reset">7</div>
                     </a>
                 </article>
@@ -131,7 +131,7 @@
                 <article class="tile">
                     <a href="../faces">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-accounts"></i></div>
-                        <div class="tile-name all-tittles">Clientes</div>
+                        <div class="tile-name all-tittles">Empleados</div>
                         <div class="tile-num full-reset">70</div>
                     </a>
                 </article>
@@ -140,7 +140,7 @@
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-male-female"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">personal administrativo</div>
+                        <div class="tile-name all-tittles" style="width: 90%;">Pacientes</div>
                         <div class="tile-num full-reset">17</div>
                     </a>
                 </article>
