--- a/web/Equipo.xhtml
+++ b/web/Equipo.xhtml
@@ -35,7 +35,7 @@
        
         <!--=============Menu principal==================-->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="faces/index.xhtml">Inicion</a>
+            <a class="navbar-brand" href="faces/index.xhtml">Inicio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -57,11 +57,11 @@
                         <a class="nav-link disabled" href="Localicacion.xhtml">Localizanos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Preguntas</a>
+                        <a class="nav-link disabled" href="Contactanos.jsp">Contactanos</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a href="faces/login.xhtml"> Inicio de Sesion </a></button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">  <a href="login.xhtml">Inicio de Sesion</a> </button>
                 </form>
             </div>
         </nav>
