--- a/web/Instalaciones.xhtml
+++ b/web/Instalaciones.xhtml
@@ -59,13 +59,14 @@
                         <a class="nav-link disabled" href="Localicacion.xhtml">Localizanos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Preguntas</a>
+                        <a class="nav-link disabled" href="Contactanos.jsp">Contactanos</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><a href="faces/login.xhtml"> Inicio de Sesion </a></button>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">  <a href="login.xhtml">Inicio de Sesion</a> </button>
                 </form>
-            </div>        </nav>
+            </div>        
+        </nav>
         <!--========================Menu principal==================================-->
 
         <!--========================Carusel==================================-->
