--- a/web/Instalaciones.xhtml
+++ b/web/Instalaciones.xhtml
@@ -50,16 +50,16 @@
                         <a class="nav-link" href="Instalaciones.xhtml">Instalaciones</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="Equipo.xhtml">Equipos</a>
+                        <a class="nav-link" href="Equipo.xhtml">Equipos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="personal.xhtml">Personal<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="personal.xhtml">Personal<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="Localicacion.xhtml">Localizanos</a>
+                        <a class="nav-link" href="Localicacion.xhtml">Localizanos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="Contactanos.jsp">Contactanos</a>
+                        <a class="nav-link" href="Contactanos.jsp">Contactanos</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
