--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -139,56 +139,49 @@
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-male-female"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">Pacientes</div>
-                        <div class="tile-num full-reset">17</div>
+                        <div class="tile-num full-reset">Pacientes</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-truck"></i></div>
-                        <div class="tile-name all-tittles">proveedores</div>
-                        <div class="tile-num full-reset">21</div>
+                        <div class="tile-num full-reset">Proveedores</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-book"></i></div>
-                        <div class="tile-name all-tittles">Medicina</div>
-                        <div class="tile-num full-reset">77</div>
+                        <div class="tile-num full-reset">Medicina</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-assignment-account"></i></div>
-                        <div class="tile-name all-tittles">Consultas</div>
-                        <div class="tile-num full-reset">17</div>
+                        <div class="tile-num full-reset">Consultas</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
-                        <div class="tile-name all-tittles">Servicios</div>
-                        <div class="tile-num full-reset">10</div>
+                        <div class="tile-num full-reset">Servicios</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-time-restore"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">devoluciones pendientes</div>
-                        <div class="tile-num full-reset">9</div>
+                        <div class="tile-num full-reset"> <p>Devoluciones Pendientes</p> </div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-calendar"></i></div>
-                        <div class="tile-name all-tittles">Revisiones</div>
-                        <div class="tile-num full-reset">7</div>
+                        <div class="tile-num full-reset">Revisiones</div>
                     </a>
                 </article>
 
@@ -196,7 +189,7 @@
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-trending-up"></i></div>
                         <div class="tile-name all-tittles" style="width: 90%;">reportes y estadísticas</div>
-                        <div class="tile-num full-reset">&nbsp;</div>
+                        <div class="tile-num">Reportes y Estadisticas</div>
                     </a>
                 </article>
             </section>
