DAO de mas eliminado

--- a/web/Administrador/RegistroEmpleado.xhtml
+++ b/web/Administrador/RegistroEmpleado.xhtml
@@ -153,7 +153,7 @@
                                 <h:form class="textoAmp">
 
                                     <div class="group-material">
-                                        <b:inputText id="correo" style=" font: bold small-caps 120%/200% serif; width: 415px;" placeholder="Ingrese nombre o numero de Identificacion"/>
+                                        <b:inputText id="noIdentificacion" style=" font: bold small-caps 120%/200% serif; width: 415px;" placeholder="Ingrese nombre o numero de Identificacion"/>
                                     </div>
                                     
                                     <!-- contenido del formulario de persona -->
