--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -62,7 +62,7 @@
 
                         <li><a href="homeAdmin.xhtml" style=" font: bold small-caps 120%/200% serif;"><i class="zmdi zmdi-home zmdi-hc-fw" ></i>&nbsp;&nbsp; Inicio</a></li>
 
-                        <li>
+                        <li>    
                             <div style=" font: bold small-caps 120%/200% serif;" class="dropdown-menu-button"><i class="zmdi zmdi-accounts zmdi-hc-fw"></i>&nbsp;&nbsp;Registros<i class="zmdi zmdi-chevron-down pull-right zmdi-hc-fw"></i></div>
                             <ul class="list-unstyled">
                                 <li style=" font: bold small-caps 120%/200% serif;"><a href="faces/vistaCompleta/nuevoIngresoPaciente.xhtml"><i class="zmdi zmdi-account-box zmdi-hc-fw"></i>&nbsp;&nbsp; Nuevo Usuario</a></li>
@@ -97,7 +97,7 @@
                     </figure>
 
                     <li style="color:#fff; cursor:default;">
-                        <span class="all-tittles">Admin Name </span>
+                        <span class="all-tittles"> Admin Name </span>
                     </li>
                     <li  class="tooltips-general exit-system-button" data-href="../index.xhtml" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
@@ -122,13 +122,13 @@
             <section class="full-reset text-center" style="padding: 40px 0;">
                 <article class="tile">
                     <a href="../faces/Administrador/EventosAdmin.xhtml">
-                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/calendar.png" width="50" height="50"></img></i></div>
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/wall-calendar.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Eventos</div>
                     </a>
                 </article>
 
                 <article class="tile">
-                    <a href="../faces/Administrador/RegistroEmpleado.xhtml">
+                    <a href="../faces/Administrador/RegistroNoExistente.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/collaboration.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Empleados</div>
                     </a>
@@ -137,60 +137,55 @@
 
                 <article class="tile">
                     <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-male-female"></i></div>
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/chatting.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Pacientes</div>
                     </a>
                 </article>
 
                 <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-truck"></i></div>
-                        <div class="tile-num full-reset">Proveedores</div>
+                    <a href="../faces/Administrador/RegistroAdmin.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/Admin.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Administradores</div>
                     </a>
                 </article>
 
                 <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-book"></i></div>
-                        <div class="tile-num full-reset">Medicina</div>
+                    <a href="../faces/Administrador/Reportes.xhtml">
+                        <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/check-mark.png" width="50" height="50"></img></i></div>
+                        <div class="tile-num full-reset">Reportes</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-assignment-account"></i></div>
-                        <div class="tile-num full-reset">Consultas</div>
+                        <div class="tile-num full-reset">Doctor</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
-                        <div class="tile-num full-reset">Servicios</div>
+                        <div class="tile-num full-reset">Enfermera</div>
                     </a>
                 </article>
 
                 <article class="tile">
                     <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-time-restore"></i></div>
-                        <div class="tile-num full-reset"> <p>Devoluciones Pendientes</p> </div>
+                        <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
+                        <div class="tile-num full-reset">Enfermera</div>
+                    </a>
+                </article>
+                
+                <article class="tile">
+                    <a href="">
+                        <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
+                        <div class="tile-num full-reset">Paciente</div>
                     </a>
                 </article>
 
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-calendar"></i></div>
-                        <div class="tile-num full-reset">Revisiones</div>
-                    </a>
-                </article>
 
-                <article class="tile">
-                    <a href="">
-                        <div class="tile-icon full-reset"><i class="zmdi zmdi-trending-up"></i></div>
-                        <div class="tile-name all-tittles" style="width: 90%;">reportes y estadísticas</div>
-                        <div class="tile-num">Reportes y Estadisticas</div>
-                    </a>
-                </article>
+
             </section>
 
 
