--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -24,10 +24,10 @@
         <br/><br/><br/><br/><br/><br/><br/>
         <h1 class="h1">Inicio Sesion</h1>
         <div class="page-container connect">
-            <h:form class="form">                 
-                <b:inputText type="text" value="#{loginBean.usuario.usurio}" style="width: 300px;" id="usuario" class="username input" placeholder="Username"/>
-                <b:inputText type="password" value="#{loginBean.usuario.contrasena}" id="contrasena" style="width: 300px;"  class="password input" placeholder="Password"/>
-                <b:commandButton icon="lock" actionListener="#{loginBean.loga()}" value="Ingresar" style="width: 200px; background: #FF4000" class="button"/>
+              <h:form class="form">                 
+                  <b:inputText type="text" value="#{loginBean.usuario.usurio}" style="width: 300px;" id="usuario" class="username input" placeholder="Username"/>
+                  <b:inputText type="password" value="#{loginBean.usuario.contrasena}" id="contrasena" style="width: 300px;"  class="password input" placeholder="Password"/>
+                  <b:commandButton icon="lock" actionListener="#{loginBean.logig()}" value="Ingresar" style="width: 200px; background: #FF4000" class="button"/>
             </h:form>
         </div>  
         
