--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -136,7 +136,7 @@
 
 
                 <article class="tile">
-                    <a href="">
+                    <a href="../Administrador/nuevoIngresoPaciente.xhtml">
                         <div class="tile-icon full-reset"><i class="zmdi"> <img class="title-icon" src="../resources/imgs/Admin/chatting.png" width="50" height="50"></img></i></div>
                         <div class="tile-num full-reset">Pacientes</div>
                     </a>
