--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -173,7 +173,7 @@
                 <article class="tile">
                     <a href="">
                         <div class="tile-icon full-reset"><i class="zmdi zmdi-timer"></i></div>
-                        <div class="tile-num full-reset">Enfermera</div>
+                        <div class="tile-num full-reset">Recepcionista</div>
                     </a>
                 </article>
                 
