--- a/web/homes/homeAdmin.xhtml
+++ b/web/homes/homeAdmin.xhtml
@@ -100,7 +100,7 @@
                     </figure>
 
                     <li style="color:#fff; cursor:default;">
-                        <span class="all-tittles"> #{controlador.getUsu()} </span>
+                        <span class="all-tittles"> #{controlador.usu.nombre} </span>
                     </li>
                     <li  class="tooltips-general exit-system-button" data-href="../index.xhtml" data-placement="bottom" title="Salir del sistema">
                         <i class="zmdi zmdi-power"></i>
